# golang-tutorial

./: .gitignore  BUILD.bazel  MODULE.bazel
src/: BUILD.bazel
